# yag

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
src/: command.rs  gitlab.rs  logger.rs  main.rs  profile.rs  repository.rs  structs.rs  utils.rs
src/command/: mod.rs  pr.rs  profile.rs
src/github/: client.rs  mod.rs  profile.rs  repository.rs  structs.rs
src/gitlab/: client.rs  mod.rs  profile.rs  repository.rs  structs.rs
