[package]
name = "yag"
version = "0.1.0"
authors = ["Yunhao Zhang <zhangyunhao.wangjie@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.22", features = ["macros"] }
reqwest = { version = "^0.10.8", features = ["json", "gzip"] }
serde = "^1.0.115"
serde_derive = "^1.0.115"
serde_json = "^1.0.57"
futures = "^0.3.5"
git-url-parse = "^0.2.0"
anyhow = "^1.0.32"
percent-encoding = "^2.1.0"
toml = "^0.5.6"
