[package]
name = "yag"
version = "0.1.0"
authors = ["Wang Jie <i@i8e.net>"]
edition = "2018"
license = "MIT"
description = "YAG is Yet Another Git CLI tool"
readme = "README.md"
homepage = "https://github.com/cnwangjie/yag"
repository = "https://github.com/cnwangjie/yag"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.22", features = ["macros"] }
reqwest = { version = "^0.10.8", features = ["json", "gzip"] }
serde = "^1.0.115"
serde_derive = "^1.0.115"
serde_json = "^1.0.57"
futures = "^0.3.5"
git-url-parse = "^0.2.0"
anyhow = "^1.0.32"
percent-encoding = "^2.1.0"
toml = "^0.5.6"
async-trait = "^0.1.40"
clap = "^2.33.3"
log = { version = "^0.4.11", features = ["std"] }
